[workspace]
members = [
  "bmap-parser",
  "bmap-rs",
]

# Most of the actual work is CPU-heavy, in particular the rust sha2
# implementation so use full optimisations otherwise everything will run quite
# slow
[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3     # Optimize for speed
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

