[package]
name = "bmap-rs"
version = "0.1.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2018"
license = "MIT AND Apache-2.0"
description = "bmap-rs is an application that handles the use of bmap crate"
repository = "https://github.com/collabora/bmap-rs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

